Fix blog post lists on mobile

--- a/assets/css/_blog.less
+++ b/assets/css/_blog.less
@@ -6,6 +6,7 @@
 		time {
 			text-align: left;
 			margin-top: @su2;
+			display: block;
 		}
 	}
 }
